--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -41,9 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
@@ -65,9 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(metadata={'source': './data/Regulaciones cacao y chocolate 2003.pdf', 'page': 0}, page_content='Status:  This is the original version (as it was originally made).\\nSTATUTORY INSTRUMENTS\\n2003 No. 1659\\nFOOD, ENGLAND\\nThe Cocoa and Chocolate Products (England) Regulations 2003\\nMade       -      -      -      - 25th June 2003\\nLaid before Parliament 3rd July 2003\\nComing into force       -      - 3rd August 2003\\nThe Secretary of State, in exercise of the powers conferred by sections 16(1)(e), 17(1), 26(1) and (3)\\nand 48(1) of the Food Safety Act 1990(1) and now vested in him(2) and of all other powers enabling\\nhim in that behalf, having had regard in accordance with section 48(4A) of that Act to relevant\\nadvice given by the Food Standards Agency, and after consultation both as required by Article 9\\nof Regulation (EC) No. 178/2002 of the European Parliament and of the Council laying down the\\ngeneral principles and requirements of food law, establishing the European Food Safety Authority\\nand laying down procedures in matters of food safety (3) and in accordance with section 48(4) and\\n(4B) of that Act, hereby makes the following Regulations:\\nTitle, commencement and application\\n1. These Regulations may be cited as the Cocoa and Chocolate Products (England) Regulations\\n2003, shall come into force on 3rd August 2003 and shall apply to England only.\\nInterpretation\\n2.—(1)  In these Regulations—\\n“the Act” means the Food Safety Act 1990;\\n(1) 1990 c. 16.\\n(2) Functions formerly exercisable by “the Ministers” (being, in relation to England and Wales and acting jointly, the Minister\\nof Agriculture, Fisheries and Food and the Secretaries of State respectively concerned with health in England and food and\\nhealth in Wales and, in relation to Scotland, the Secretary of State) are now exercisable in relation to England by the Secretary\\nof State pursuant to paragraphs 7 and 8 of Schedule 5 to the Food Standards Act 1999 (c. 28), and paragraphs 12 and 21 of\\nthat Schedule amend sections 17(1) and 48 of the 1990 Act. Functions of “the Ministers” so far as exercisable in relation\\nto Wales were transferred to the National Assembly for Wales by the National Assembly for Wales (Transfer of Functions)\\nOrder 1999 (S.I.1999/672), as read with section 40(3) of the 1999 Act, and those functions so far as exercisable in relation to\\nScotland were transferred to the Scottish Ministers by section 53 of the Scotland Act 1998 (c. 46) as read with section 40(2)\\nof the 1999 Act. Regulation 13(4) of the Food Standards Act 1999 (Transitional and Consequential Provisions and Savings)\\n(England and Wales) Regulations 2000 (S.I. 2000/656) expressly authorises the Secretary of State to amend or revoke existing\\nRegulations made or having effect as if made by the Minister of Agriculture, Fisheries and Food (whether with others or not)\\nunder the 1990 Act.\\n(3) OJ No. L31, 1.2.2002, p.1.'),\n",
+       " Document(metadata={'source': './data/Regulaciones cacao y chocolate 2003.pdf', 'page': 1}, page_content='Document Generated: 2023-04-24\\nStatus:  This is the original version (as it was originally made).\\n“catering establishment” means a restaurant, canteen, club, public house, school, hospital or\\nsimilar establishment (including a vehicle or a fixed or mobile stall) where, in the course of a\\nbusiness, food is prepared for delivery to the ultimate consumer and is ready for consumption\\nwithout further preparation;\\n“designated product” means any cocoa or chocolate product specified in column 2 of\\nSchedule 1, as read with any Note to that Schedule and any provision of regulation 3 and\\nSchedule 2 relating to that product; and “designated chocolate product” and “designated cocoa\\nproduct” mean any such product which is respectively a chocolate product or a cocoa product;\\n“EEA Agreement” means the Agreement on the European Economic Area(4) signed at Oporto\\non 2nd May 1992 as adjusted by the Protocol(5) signed at Brussels on 17th March 1993;\\n“EEA State” means a State which is a Contracting Party to the EEA Agreement;\\n“food authority” does not include—\\n(a) the council of a district in a non-metropolitan county except where the county functions\\nhave been transferred to that council pursuant to a structural change, or\\n(b) the appropriate Treasurer referred to in section 5(1)(c) of the Act (which deals with the\\nInner and the Middle Temple);\\n“the 1996 Regulations” means the Food Labelling Regulations 1996(6);\\n“other edible substances” does not include vegetable fats referred to in regulation 3 or the\\nfilling of any product specified in column 2 of item 7 or of item 10(a) of Schedule 1;\\n“preparation” includes manufacture and any form of processing or treatment;\\n“reserved description”, as respects any designated product, means any description specified in\\nrelation to that product in column 1 of Schedule 1;\\n“sell” includes offer or expose for sale or have in possession for sale, and “sale” shall be\\nconstrued accordingly; and\\n“ultimate consumer” means any person who buys otherwise than—\\n(a) for the purpose of resale,\\n(b) for the purposes of a catering establishment, or\\n(c) for the purposes of a manufacturing business.\\n(2)  Any reference in these Regulations to a numbered regulation or Schedule shall be construed\\nas a reference to the regulation or Schedule bearing that number in these Regulations.\\nVegetable fats in chocolate products\\n3.—(1)  Subject to paragraph (2) below, the vegetable fats, other than cocoa butter, specified in\\nSchedule 2 may be added to those designated chocolate products specified in column 2 of items 3,\\n4, 5, 6, 8 and 9 of Schedule 1.\\n(2)  An addition in accordance with paragraph 1 may not exceed 5 per cent of the finished product,\\nafter deduction of the total weight of any other edible substances used in accordance with the Note 1\\nto Schedule 1, without reducing the minimum content of cocoa butter or total dry cocoa solids.\\nScope of Regulations\\n4. These Regulations apply to designated products intended for human consumption and ready\\nfor delivery to the ultimate consumer or to a catering establishment.\\n(4) OJ No. L1, 3.1.94, p.1.\\n(5) OJ No. L1, 3.1.94, p.571.\\n(6) S.I. 1996/1499, the relevant amending instrument is S.I. 1998/1398.\\n2')]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "from dotenv import load_dotenv\n",
@@ -75,7 +98,7 @@
     "load_dotenv()\n",
     "\n",
     "file_path = (\n",
-    "    \"../practicos-rag/data/Regulaciones cacao y chocolate 2003.pdf\"\n",
+    "    \"./data/Regulaciones cacao y chocolate 2003.pdf\"\n",
     ")\n",
     "loader = PyPDFLoader(file_path)\n",
     "docs = loader.load()\n",
@@ -102,9 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Document(metadata={'source': './data/Regulaciones cacao y chocolate 2003.pdf', 'page': 0}, page_content='Status:  This is the original version (as it was originally made).\\nSTATUTORY INSTRUMENTS\\n2003 No. 1659\\nFOOD, ENGLAND\\nThe Cocoa and Chocolate Products (England) Regulations 2003\\nMade       -      -      -      - 25th June 2003\\nLaid before Parliament 3rd July 2003\\nComing into force       -      - 3rd August 2003\\nThe Secretary of State, in exercise of the powers conferred by sections 16(1)(e), 17(1), 26(1) and (3)\\nand 48(1) of the Food Safety Act 1990(1) and now vested in him(2) and of all other powers enabling\\nhim in that behalf, having had regard in accordance with section 48(4A) of that Act to relevant\\nadvice given by the Food Standards Agency, and after consultation both as required by Article 9\\nof Regulation (EC) No. 178/2002 of the European Parliament and of the Council laying down the\\ngeneral principles and requirements of food law, establishing the European Food Safety Authority\\nand laying down procedures in matters of food safety (3) and in accordance with section 48(4) and'),\n",
+       " Document(metadata={'source': './data/Regulaciones cacao y chocolate 2003.pdf', 'page': 0}, page_content='general principles and requirements of food law, establishing the European Food Safety Authority\\nand laying down procedures in matters of food safety (3) and in accordance with section 48(4) and\\n(4B) of that Act, hereby makes the following Regulations:\\nTitle, commencement and application\\n1. These Regulations may be cited as the Cocoa and Chocolate Products (England) Regulations\\n2003, shall come into force on 3rd August 2003 and shall apply to England only.\\nInterpretation\\n2.—(1)  In these Regulations—\\n“the Act” means the Food Safety Act 1990;\\n(1) 1990 c. 16.\\n(2) Functions formerly exercisable by “the Ministers” (being, in relation to England and Wales and acting jointly, the Minister\\nof Agriculture, Fisheries and Food and the Secretaries of State respectively concerned with health in England and food and\\nhealth in Wales and, in relation to Scotland, the Secretary of State) are now exercisable in relation to England by the Secretary')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "\n",
@@ -162,7 +197,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/marcofura/anaconda3/envs/actividad_1/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_qdrant import QdrantVectorStore\n",
     "from qdrant_client import QdrantClient\n",
@@ -187,9 +231,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['912aca84-793b-44c6-bb26-2d95d9814209',\n",
+       " 'b578c272-4c51-4617-9322-7e69a55bf552',\n",
+       " '5e8e21dc-8dc5-424c-9655-69544cde86b2',\n",
+       " '3c212086-1c46-4007-b5e1-29fb311ad13a',\n",
+       " '8c9d3f9b-f2b1-4d81-97ee-412bdbf4f97f',\n",
+       " 'c04778bc-5ac5-4768-90b0-cce83f2503c6',\n",
+       " '2aef770b-177b-4bdf-9da1-7c63e9cadb0b',\n",
+       " '3c495462-8297-4a95-959a-f9661ef581d6',\n",
+       " '13f9a1e0-436d-4a6d-afcb-26ffd455fa0c',\n",
+       " '938b7a18-c0b5-463e-94d7-2ea2c5019c08',\n",
+       " 'a92197b5-0c93-455a-b0cf-b6b2e21f869c',\n",
+       " '3ef40345-c39e-43df-b635-c75578ec0e09',\n",
+       " 'f60c7b88-5ade-4800-9048-98b930b95fef',\n",
+       " 'bbcf2daf-4e73-4af9-8fef-59720b2e4d67',\n",
+       " 'f15bd894-bc6a-4155-886d-91427dd29217',\n",
+       " '9174bac7-b91c-4f6c-a91e-3e9879fcfff7',\n",
+       " 'b6e45f13-a362-4865-afa4-aecd0a8f6c4f',\n",
+       " 'f905414e-20d2-4a7f-9383-b95cf6f19254',\n",
+       " '6f156d6e-7c23-4d3e-a86e-aa664528066e',\n",
+       " 'ee725c2e-f473-4c2f-9af1-025560b6dc32',\n",
+       " '28cf361e-bdac-4a2f-8f95-60139305c9a9',\n",
+       " '22417848-b297-4ee5-936f-70641436a62c',\n",
+       " '92a76c1b-4cc0-443f-af0e-d9cac5442877',\n",
+       " 'c0d00954-0828-4409-ab6b-4044aff6e0bf',\n",
+       " '29bec091-4e2b-4f76-aeca-9d779c434ca5',\n",
+       " 'aa77119c-9d1e-454d-97a4-f17716501e37',\n",
+       " 'a71687cf-7176-4c40-8646-c03d2e5aea78',\n",
+       " '721554c6-79fb-4a01-b408-00da6a869237',\n",
+       " '0ef37a85-3bf2-4534-a82b-5d48d288dadb',\n",
+       " '73d3906a-a26e-4e01-ad3a-2e6b9b24f51f',\n",
+       " '161dfc7e-4246-4e98-a92a-1cf52bbebd3f',\n",
+       " '5e2032b4-a3e7-4d81-bef4-e21cfa890acc',\n",
+       " '466f32eb-6ac1-4ab2-90b3-1ad609701a9a',\n",
+       " '00604506-1b0c-477b-8ae5-1c6d50f5c897',\n",
+       " 'b5f9f370-d250-440d-a7ff-b1095dadc4ec',\n",
+       " 'b7b63fe3-bc50-4fb7-af5e-394561c86267',\n",
+       " 'cf4edbcd-5adc-4c98-9d17-c519aa2c8c3f',\n",
+       " '58eaa963-8f2f-45fc-92ae-de176c0b6cd1',\n",
+       " 'bb9cf7a8-d3eb-4bdc-aa69-6df04add2728',\n",
+       " '930d0a2a-ff77-4588-b8f2-ab6a1b5ac85a',\n",
+       " '48823503-5e88-4a29-a88d-0497caafab7b',\n",
+       " 'b41773c9-e446-443a-938c-9adba885f153',\n",
+       " '7dc2a803-f52e-45a8-8ac1-62999ecde7a9']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from uuid import uuid4\n",
     "\n",
@@ -227,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,9 +353,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/marcofura/anaconda3/envs/actividad_1/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\\nQuestion: {question} \\nContext: {context} \\nAnswer:\""
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from langchain import hub\n",
     "prompt = hub.pull(\"rlm/rag-prompt\")\n",
@@ -267,9 +383,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nQuestion: {question} \\nContext: {context} \\nAnswer: '"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "prompt = \"You are an assistant for question-answering tasks. Use the following pieces of retrieved \"\n",
     "\"context to answer the question. If you don't know the answer, just say that you don't know. \"\n",
@@ -279,9 +406,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/marcofura/anaconda3/envs/actividad_1/lib/python3.11/site-packages/langsmith/client.py:241: LangSmithMissingAPIKeyWarning: API key must be provided when using hosted LangSmith API\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.runnables import RunnablePassthrough\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
@@ -318,33 +454,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Here are three concise sentences:\\n\\nThe regulations for labeling cacao and chocolate products require them to be marked or labeled with specific details such as reserved descriptions, ingredients, and percentages of cocoa solids. For designated chocolate products containing vegetable fats, a statement indicating the presence of these fats must be clearly legible. The total dry cocoa solids content must be calculated after deductions for other edible substances, according to Note 1 to Schedule 1.'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rag_chain.invoke(\"Can you tell me what are the regulations for labeling of cacao and chocolate?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'According to the provided context, regulations for labeling cacao and chocolate include \"\\n\"using a reserved description, such as \"chocolate\", \"milk chocolate\", or \"couverture chocolate\", \"\\n\"and indicating dry milk solids content in products labeled as milk chocolate. \"\\n\"Additionally, designated chocolate products containing vegetable fats other than cocoa butter \"\\n\"must have the statement \"contains vegetable fats in addition to cocoa butter\".'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"According to the provided context, regulations for labeling cacao and chocolate include \"\n",
     "\"using a reserved description, such as \"chocolate\", \"milk chocolate\", or \"couverture chocolate\", \"\n",
     "\"and indicating dry milk solids content in products labeled as milk chocolate. \"\n",
     "\"Additionally, designated chocolate products containing vegetable fats other than cocoa butter \"\n",
     "\"must have the statement \"contains vegetable fats in addition to cocoa butter\".\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rag_chain.invoke(\"Can you tell me what are the proportions of cocoa butter in the chocolate?\")"
    ]
   },
   {
@@ -355,7 +504,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "actividad_1",
    "language": "python",
    "name": "python3"
   },
