--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -106,6 +106,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(docs[0].page_content)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
