base chunking con ejercicio realizado para documento chocolate

--- a/02_chunking-Copy1.ipynb
+++ b/02_chunking-Copy1.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,9 +67,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This is the text I would like to ch',\n",
+       " 'unk up. It is the example text for ',\n",
+       " 'this exercise']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text = \"This is the text I would like to chunk up. It is the example text for this exercise\"\n",
     "\n",
@@ -88,9 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(chunks[0])"
    ]
@@ -115,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,18 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Document(metadata={}, page_content='This is the text I would like to ch'),\n",
-       " Document(metadata={}, page_content='unk up. It is the example text for'),\n",
-       " Document(metadata={}, page_content='this exercise')]"
+       "[Document(metadata={}, page_content='This is the text I would like to chunk up. It is the example text for this exercise')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +219,7 @@
        " Document(metadata={}, page_content='ext for this exercise')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +335,7 @@
        " Document(metadata={}, page_content='[1]')]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
